# dbmazz

./: .dockerignore  .gitignore  ARCHITECTURE.md  CDC-SUCCESS.md  CHANGELOG.md  CHANGES-SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING_CONNECTORS.md  Cargo.toml  Cross.toml  DEMO-FINAL-STATUS.md  DEMO-QUICKSTART.md  DEMO-STATUS-FINAL.md  Dockerfile  Dockerfile.mysql  README.md  TOAST-IMPLEMENTATION.md  VALIDATION-STATUS.md  build.rs  docker-compose.production.yml  ez-cdc  install.sh
.claude/reports/: snapshot-perf-analysis-2026-03-12.md
.githooks/: README.md  pre-push
.github/: CODEOWNERS
.github/workflows/: auto-tag.yml  ci.yml  claude-review.yml  release.yml
.plans/: multi-sink-roadmap.md  phase-0-sink-architecture.md  postgres-target.md
assets/: demo.tape
benchmarks/: 2026-03-07-tpcds-1tb-snapshot.md  2026-03-08-tpcds-1tb-no-gzip.md  2026-04-13-cdc-footprint-multitenant.md
demo/: .env.demo  DEMO-READY.md  Dockerfile.dbmazz  Dockerfile.demo  README.md  demo-start.sh  demo-stop.sh  demo-test-cdc-simple.sh  demo-test-cdc.sh  demo-validate.sh  demo-verify.sh  docker-compose.demo.yml  monitor-events.sh  run-local.sh
demo/monitor/: Dockerfile  dashboard.py
demo/postgres/: init.sql
demo/starrocks/: init.sql
demo/toast-generator/: Dockerfile
demo/traffic-generator/: Dockerfile  generate.py
deploy/: .env.example  .env.snowflake.example  Dockerfile  docker-compose.yml  load-test.py  test-sink.sh
deploy/init/: postgres-init.sql  starrocks-init.sh
docs/: architecture.md  configuration.md  contributing-connectors.md  mysql-source.md  production-deployment.md  sink-architecture-improvements.md
e2e/: .env.snowflake.example  Dockerfile  README.md  compose.yml  pyproject.toml
e2e-cli/: .gitignore  Cargo.toml  Dockerfile.runtime  README.md
e2e-cli/fixtures/: postgres-seed.sql
e2e-cli/src/: instantiate.rs  main.rs  paths.rs  preflight.rs
e2e-cli/src/clients/: dbmazz.rs  mod.rs  source_pg.rs
e2e-cli/src/clients/targets/: mod.rs  postgres.rs  snowflake.rs  starrocks.rs
e2e-cli/src/commands/: clean.rs  datasource.rs  down.rs  logs.rs  mod.rs  quickstart.rs  status.rs  up.rs  verify_cmd.rs
e2e-cli/src/compose/: builder.rs  runner.rs
e2e-cli/src/config/: loader.rs  mod.rs  presets.rs  schema.rs  store.rs
e2e-cli/src/daemon/: mod.rs
e2e-cli/src/load/: generator.rs  mod.rs
e2e-cli/src/tui/: banner.rs  dashboard.rs  mod.rs  prompts.rs  report.rs  theme.rs
e2e-cli/src/verify/: mod.rs  polling.rs  runner.rs  tier1.rs
e2e-cli/templates/: config-blank.yaml
e2e-cli/tests/: integration.rs
e2e/fixtures/: starrocks-init.sh
e2e/src/ez_cdc_e2e/: __init__.py  cli.py  cli_datasource.py  compose.py  compose_builder.py  dbmazz.py  instantiate.py  paths.py  preflight.py  profiles.py
e2e/src/ez_cdc_e2e/backends/: __init__.py  base.py  postgres.py  snowflake.py  starrocks.py
e2e/src/ez_cdc_e2e/datasources/: __init__.py  loader.py  presets.py  schema.py  store.py  wizard.py
e2e/src/ez_cdc_e2e/load/: __init__.py  generator.py
e2e/src/ez_cdc_e2e/quickstart/: __init__.py  dashboard.py
e2e/src/ez_cdc_e2e/source/: __init__.py  base.py  postgres.py
e2e/src/ez_cdc_e2e/tui/: __init__.py  banner.py  keys.py  prompts.py  report.py  theme.py
e2e/src/ez_cdc_e2e/verify/: __init__.py  common.py  runner.py  tier1.py
examples/: README.md  docker-compose.demo.yml
examples/postgres/: init.sql  seed-data.sql
examples/starrocks/: init.sql
examples/toast-generator/: generate.py
examples/traffic-generator/: generate.py
quickstart/: starrocks-init.sh
session-logs/: 2026-03-22.md
src/: config.rs  engine.rs  lib.rs  main.rs  state_store.rs  utils.rs
src/connectors/: mod.rs
src/connectors/sinks/: mod.rs  schema_evolution.rs
src/connectors/sinks/_template/: README.md
src/connectors/sinks/postgres/: README.md  merge_generator.rs  mod.rs  normalizer.rs  raw_table.rs  schema_tracking.rs  setup.rs  types.rs
src/connectors/sinks/snowflake/: README.md  client.rs  config.rs  merge_generator.rs  mod.rs  normalizer.rs  parquet_writer.rs  schema_evolution.rs  setup.rs  stage.rs  types.rs
src/connectors/sinks/starrocks/: README.md  config.rs  mod.rs  schema_evolution.rs  setup.rs  stream_load.rs  types.rs
src/connectors/sources/: mod.rs
src/connectors/sources/_template/: README.md
src/connectors/sources/postgres/: README.md  config.rs  mod.rs  parser.rs  replication.rs  setup.rs  types.rs
src/control/: handlers.rs  metrics_sampler.rs  mod.rs  state.rs
src/core/: error.rs  mod.rs  position.rs  record.rs  traits.rs
src/demo/: handlers.rs  mod.rs  traffic.rs
src/demo/assets/: index.html
src/engine/: mod.rs
src/engine/replication/: mod.rs  mysql.rs  postgres.rs
src/engine/setup/: error.rs  mod.rs  postgres.rs  starrocks.rs
src/engine/snapshot/: active_chunks.rs  chunker.rs  mod.rs  mysql.rs  state_store.rs  utils.rs  worker.rs
src/grpc/: cpu_metrics.rs  mod.rs  services.rs  state.rs
src/http_api/: handlers.rs  mod.rs
src/http_api/assets/: status.html
src/pipeline/: mod.rs  schema_cache.rs
src/proto/: dbmazz.proto
src/replication/: mod.rs  pg_stream.rs  wal_handler.rs
src/sink/: adapter.rs  curl_loader.rs  mod.rs  starrocks.rs
src/source/: converter.rs  mod.rs  parser.rs  postgres.rs
src/source/mysql/: binlog_stream.rs  converter.rs  gtid.rs  mod.rs  parser.rs  schema.rs  setup.rs
tests/: mysql_cdc_concurrent_snapshot.rs  mysql_snapshot_low_watermark.rs
tests/common/: mod.rs
