[package]
name = "dbmazz"
version = "0.1.0"
edition = "2021"
license = "Elastic-2.0"

[dependencies]
# Materialize fork with full support for logical replication
# SECURITY NOTE: Using branch = "master" is not ideal for production as it can introduce
# unexpected breaking changes or security issues. For better security and reproducibility:
# TODO: Pin to a specific commit using rev = "COMMIT_HASH" after verifying stability
# Example: tokio-postgres = { git = "...", rev = "abc123...", features = [...] }
# Steps to pin:
# 1. Run: git ls-remote https://github.com/MaterializeInc/rust-postgres HEAD
# 2. Test the specific commit hash with your application
# 3. Replace branch = "master" with rev = "HASH" for all three dependencies below
tokio-postgres = { git = "https://github.com/MaterializeInc/rust-postgres", branch = "master", features = ["with-chrono-0_4", "with-serde_json-1"] }
tokio = { version = "1.36", features = ["full"] }
postgres-protocol = { git = "https://github.com/MaterializeInc/rust-postgres", branch = "master" }
postgres-types = { git = "https://github.com/MaterializeInc/rust-postgres", branch = "master", features = ["derive", "with-chrono-0_4", "with-serde_json-1"] }
reqwest = { version = "0.11.24", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0.197", features = ["derive"] }
sonic-rs = "0.3"
anyhow = "1.0.81"
chrono = { version = "0.4.35", features = ["serde"] }
dotenvy = "0.15.7"
bytes = "1.5.0"
futures = "0.3.30"
log = "0.4.21"
env_logger = "0.11.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4.3"
tokio-stream = "0.1.17"
hashbrown = "0.16.1"
async-trait = "0.1.89"
memchr = "2.7.6"
simdutf8 = "0.1.5"
tonic = "0.12"
prost = "0.13"
tonic-reflection = "0.12"
mysql_async = "0.34"
curl = { version = "0.4", features = ["static-curl"] }
serde_json = "1.0"
sysinfo = "0.30"
libc = "0.2"
parking_lot = "0.12"
url = "2.5"
# Force vendored OpenSSL for musl cross-compilation
openssl-sys = { version = "0.9", features = ["vendored"] }

[dev-dependencies]
serial_test = "3.0"

[build-dependencies]
tonic-build = "0.12"

[profile.release]
debug = true  # Include debug symbols for flamegraph profiling

