[package]
name = "dbmazz"
version = "1.6.3"
edition = "2021"
license = "Elastic-2.0"
# Minimum Supported Rust Version.
# 1.91.1 is required by aws-smithy-async 1.2.14 (transitive dep of aws-sigv4).
rust-version = "1.91.1"

[features]
default = ["sink-starrocks", "sink-postgres", "sink-snowflake", "grpc-reflection", "http-api"]
http-api = ["dep:axum", "dep:tower-http"]
sink-starrocks = ["dep:curl", "dep:mysql_async", "dep:openssl-sys"]
sink-postgres = []
sink-snowflake = [
    "dep:reqwest", "dep:arrow", "dep:parquet",
    "dep:jsonwebtoken", "dep:rsa", "dep:pem", "dep:sha2",
    "dep:aws-sigv4", "dep:aws-credential-types", "dep:uuid",
]
grpc-reflection = ["dep:tonic-reflection"]

[dependencies]
# Materialize fork with full support for logical replication
# SECURITY NOTE: Using branch = "master" is not ideal for production as it can introduce
# unexpected breaking changes or security issues. For better security and reproducibility:
# TODO: Pin to a specific commit using rev = "COMMIT_HASH" after verifying stability
# Example: tokio-postgres = { git = "...", rev = "abc123...", features = [...] }
# Steps to pin:
# 1. Run: git ls-remote https://github.com/MaterializeInc/rust-postgres HEAD
# 2. Test the specific commit hash with your application
# 3. Replace branch = "master" with rev = "HASH" for all three dependencies below
tokio-postgres = { git = "https://github.com/MaterializeInc/rust-postgres", branch = "master", features = ["with-chrono-0_4", "with-serde_json-1"] }
tokio = { version = "1.36", features = ["rt-multi-thread", "time", "sync", "macros", "net", "io-util"] }
postgres-protocol = { git = "https://github.com/MaterializeInc/rust-postgres", branch = "master" }
postgres-types = { git = "https://github.com/MaterializeInc/rust-postgres", branch = "master", features = ["derive", "with-chrono-0_4", "with-serde_json-1"] }
serde = { version = "1.0.197", features = ["derive"] }
anyhow = "1.0.81"
chrono = { version = "0.4.35", features = ["serde"] }
dotenvy = "0.15.7"
bytes = "1.5.0"
futures-util = "0.3.30"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4.3"
tokio-stream = "0.1.17"
hashbrown = "0.16.1"
async-trait = "0.1.89"
memchr = "2.7.6"
simdutf8 = "0.1.5"
tonic = "0.12"
prost = "0.13"
serde_json = "1.0"
libc = "0.2"
url = "2.5"
base64 = "0.22"

# --- Optional: StarRocks sink ---
curl = { version = "0.4", features = ["static-curl"], optional = true }
mysql_async = { version = "0.34", optional = true }
# Force vendored OpenSSL for musl cross-compilation (needed by curl)
openssl-sys = { version = "0.9", features = ["vendored"], optional = true }

# --- Optional: Snowflake sink ---
reqwest = { version = "0.11.24", default-features = false, features = ["json", "stream", "rustls-tls"], optional = true }
arrow = { version = "53", default-features = false, features = ["json"], optional = true }
parquet = { version = "53", default-features = false, features = ["snap", "arrow"], optional = true }
jsonwebtoken = { version = "9", optional = true }
rsa = { version = "0.9", optional = true }
pem = { version = "3", optional = true }
sha2 = { version = "0.10", optional = true }
aws-sigv4 = { version = "1.2", optional = true }
aws-credential-types = { version = "1.2", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }

# --- Optional: gRPC reflection ---
tonic-reflection = { version = "0.12", optional = true }

# --- Optional: HTTP API ---
axum = { version = "0.7", features = ["json"], optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }

[dev-dependencies]
serial_test = "3.0"

[build-dependencies]
tonic-build = "0.12"

[profile.release]
debug = 1             # Line tables only (flamegraphs work, smaller binary)
strip = "debuginfo"   # Strip debug info from final binary
lto = "thin"          # Dead-code elimination across crates

