[package]
name = "ez-cdc-cli"
version = "1.4.4"
edition = "2021"
license = "Elastic-2.0"
description = "EZ-CDC end-to-end test harness — interactive CLI for verify, load, and quickstart"

[[bin]]
name = "ez-cdc"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
cliclack = "0.3"

# Dashboard
ratatui = "0.30"
crossterm = "0.29"

# Progress & styling
indicatif = "0.18"
console = "0.16"
comfy-table = "7.2"
colorgrad = "0.8"

# Banner
tui-banner = "0.2"

# Async
async-trait = "0.1"

# Errors
color-eyre = "0.6"
thiserror = "2"

# HTTP + DB
# `default-features = false` + `rustls` (reqwest) and `default-rustls`
# (mysql_async) avoid pulling native-tls → openssl-sys, which would
# otherwise break cross-compilation to x86_64-apple-darwin from the
# ARM-native `macos-latest` release runner and force libssl-dev on
# every Linux build host.
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
tokio-util = { version = "0.7", features = ["rt"] }
mysql_async = { version = "0.34", default-features = false, features = ["default-rustls"] }

# Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"

# Random (traffic generator)
rand = "0.9"

# Utils
anyhow = "1"
chrono = "0.4"
regex = "1"
sha2 = "0.10"
url = "2"
atty = "0.2"
once_cell = "1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }
